Noise Model running. But analysis is not

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,159 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "\n",
-    "from pyquil import Program, get_qc\n",
-    "from pyquil.gates import CZ, H, I, X, MEASURE\n",
-    "from pyquil.quilbase import Declare\n",
-    "from scipy.linalg import expm\n",
-    "from scipy.stats import binom\n",
-    "\n",
-    "\n",
-    "def damping_channel(damp_prob=.1):\n",
-    "    \"\"\"\n",
-    "    Generate the Kraus operators corresponding to an amplitude damping\n",
-    "    noise channel.\n",
-    "\n",
-    "    :params float damp_prob: The one-step damping probability.\n",
-    "    :return: A list [k1, k2] of the Kraus operators that parametrize the map.\n",
-    "    :rtype: list\n",
-    "    \"\"\"\n",
-    "    damping_op = np.sqrt(damp_prob) * np.array([[0, 1],\n",
-    "                                                [0, 0]])\n",
-    "\n",
-    "    residual_kraus = np.diag([1, np.sqrt(1-damp_prob)])\n",
-    "    #print(residual_kraus, damping_op)\n",
-    "    return [residual_kraus, damping_op]\n",
-    "\n",
-    "def append_kraus_to_gate(kraus_ops, g):\n",
-    "    \"\"\"\n",
-    "    Follow a gate `g` by a Kraus map described by `kraus_ops`.\n",
-    "\n",
-    "    :param list kraus_ops: The Kraus operators.\n",
-    "    :param numpy.ndarray g: The unitary gate.\n",
-    "    :return: A list of transformed Kraus operators.\n",
-    "    \"\"\"\n",
-    "    return [kj.dot(g) for kj in kraus_ops]\n",
-    "\n",
-    "\n",
-    "def append_damping_to_gate(gate, damp_prob=.1):\n",
-    "    \"\"\"\n",
-    "    Generate the Kraus operators corresponding to a given unitary\n",
-    "    single qubit gate followed by an amplitude damping noise channel.\n",
-    "\n",
-    "    :params np.ndarray|list gate: The 2x2 unitary gate matrix.\n",
-    "    :params float damp_prob: The one-step damping probability.\n",
-    "    :return: A list [k1, k2] of the Kraus operators that parametrize the map.\n",
-    "    :rtype: list\n",
-    "    \"\"\"\n",
-    "    return append_kraus_to_gate(damping_channel(damp_prob), gate)\n",
-    "\n",
-    "def take_counts(array):\n",
-    "    dic = dict()\n",
-    "    for a in array:\n",
-    "        if tuple(k for k in a) in dic:\n",
-    "            dic[tuple(k for k in a)] += 1\n",
-    "        else:\n",
-    "            dic[tuple(k for k in a)] = 1\n",
-    "    return dic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'numpy.ndarray' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[18], line 37\u001b[0m\n\u001b[0;32m     33\u001b[0m lengths \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m201\u001b[39m, \u001b[38;5;241m10\u001b[39m, dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mint\u001b[39m)\n\u001b[0;32m     34\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m jj, num_I \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(lengths):\n\u001b[0;32m     35\u001b[0m     p \u001b[38;5;241m=\u001b[39m Program(\n\u001b[0;32m     36\u001b[0m         Declare(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mro\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBIT\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;241m1\u001b[39m),\n\u001b[1;32m---> 37\u001b[0m         \u001b[43mX\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m,\n\u001b[0;32m     38\u001b[0m     )\n\u001b[0;32m     39\u001b[0m     \u001b[38;5;66;03m# want increasing number of I-gates\u001b[39;00m\n\u001b[0;32m     40\u001b[0m     p\u001b[38;5;241m.\u001b[39minst([I(\u001b[38;5;241m0\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_I)])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'numpy.ndarray' object is not callable"
-     ]
-    }
-   ],
-   "source": [
-    "from pyquil.api import local_forest_runtime\n",
-    "with local_forest_runtime():\n",
-    "    \n",
-    "    qc = get_qc('2q-qvm')\n",
-    "    # single step damping probability\n",
-    "    damping_per_I = 0.02\n",
-    "\n",
-    "    # number of program executions\n",
-    "    trials = 200\n",
-    "\n",
-    "    results_damping = []\n",
-    "    lengths = np.arange(0, 201, 10, dtype=int)\n",
-    "    for jj, num_I in enumerate(lengths):\n",
-    "        p = Program(\n",
-    "            Declare(\"ro\", \"BIT\", 1),\n",
-    "            X(0),\n",
-    "        )\n",
-    "        # want increasing number of I-gates\n",
-    "        p.inst([I(0) for _ in range(num_I)])\n",
-    "        p.inst(MEASURE(0, (\"ro\", 0)))\n",
-    "\n",
-    "        # overload identity I on qc 0\n",
-    "        p.define_noisy_gate(\"I\", [0], append_damping_to_gate(np.eye(2), damping_per_I))\n",
-    "        #print(append_damping_to_gate(np.eye(2), damping_per_I))\n",
-    "        p.wrap_in_numshots_loop(trials)\n",
-    "        qc.qam.random_seed = int(num_I)\n",
-    "        res = qc.run(p).get_register_map().get(\"ro\")\n",
-    "        print(take_counts(res))\n",
-    "        results_damping.append([np.mean(res), np.std(res) / np.sqrt(trials)])\n",
-    "\n",
-    "    results_damping = np.array(results_damping)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dense_lengths = np.arange(0, lengths.max()+1, .2)\n",
-    "survival_probs = (1-damping_per_I)**dense_lengths\n",
-    "logpmf = binom.logpmf(np.arange(trials+1)[np.newaxis, :], trials, survival_probs[:, np.newaxis])/np.log(10)\n",
-    "\n",
-    "DARK_TEAL = '#48737F'\n",
-    "FUSCHIA = \"#D6619E\"\n",
-    "BEIGE = '#EAE8C6'\n",
-    "\n",
-    "import matplotlib.colors as colors\n",
-    "import matplotlib.pyplot as plt\n",
-    "cm = colors.LinearSegmentedColormap.from_list('anglemap', [\"white\", FUSCHIA, BEIGE], N=256, gamma=1.5)\n",
-    "\n",
-    "plt.figure(figsize=(14, 6))\n",
-    "plt.pcolor(dense_lengths, np.arange(trials+1)/trials, logpmf.T, cmap=cm, vmin=-4, vmax=logpmf.max())\n",
-    "plt.plot(dense_lengths, survival_probs, c=BEIGE, label=\"Expected mean\")\n",
-    "plt.errorbar(lengths, results_damping[:,0], yerr=2*results_damping[:,1], c=DARK_TEAL,\n",
-    "            label=r\"noisy qvm, errorbars $ = \\pm 2\\hat{\\sigma}$\", marker=\"o\")\n",
-    "cb = plt.colorbar()\n",
-    "cb.set_label(r\"$\\log_{10} \\mathrm{Pr}(n_1; n_{\\rm trials}, p_{\\rm survival}(t))$\", size=20)\n",
-    "\n",
-    "plt.title(\"Amplitude damping model of a single qubit\", size=20)\n",
-    "plt.xlabel(r\"Time $t$ [arb. units]\", size=14)\n",
-    "plt.ylabel(r\"$n_1/n_{\\rm trials}$\", size=14)\n",
-    "plt.legend(loc=\"best\", fontsize=18)\n",
-    "plt.xlim(*lengths[[0, -1]])\n",
-    "plt.ylim(0, 1)\n",
-    "\n",
-    "plt.savefig(\"test.png\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +12,9 @@
       "[[1.+0.j 0.+0.j 0.+0.j 0.+0.j]\n",
       " [0.+0.j 1.+0.j 0.+0.j 0.+0.j]\n",
       " [0.+0.j 0.+0.j 0.+0.j 1.+0.j]\n",
-      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j]]\n"
+      " [0.+0.j 0.+0.j 1.+0.j 0.+0.j]]\n",
+      "[[1.+0.j 0.+0.j]\n",
+      " [0.+0.j 1.+0.j]]\n"
      ]
     }
    ],
@@ -197,32 +47,116 @@
     "pauli_IX = np.kron(I, X)\n",
     "pauli_II = np.kron(I, I)\n",
     "\n",
-    "print(np.matmul(cnot,pauli_II))"
+    "print(np.matmul(cnot,pauli_II))\n",
+    "\n",
+    "print(np.kron(np.array([[1]]), I))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def apply_noise_model(prog, backend, error_template, gate):\n",
+    "\timport numpy as np\n",
+    "\t# Define Pauli operations using PauliTerm\n",
+    "\t# Defining the Pauli matrices\n",
+    "\tPaulis = {}\n",
+    "\tPaulis['I'] = np.array([[1.+0.j, 0.+0.j],\n",
+    "\t\t\t\t[0.+0.j, 1.+0.j]])\n",
+    "\n",
+    "\tPaulis['X'] = np.array([[0.+0.j, 1.+0.j],\n",
+    "\t\t\t\t[1.+0.j, 0.+0.j]])\n",
+    "\n",
+    "\tPaulis['Y'] = np.array([[0.+1.j, 0.+0.j],\n",
+    "\t\t\t\t[0.+0.j, 0.-1.j]])\n",
+    "\n",
+    "\tPaulis['Z'] = np.array([[1.+0.j, 0.+0.j],\n",
+    "\t\t\t\t[0.+0.j, -1.+0.j]])\n",
+    "\n",
+    "\tGates = {}\n",
+    "\tGates['CNOT'] = np.array([[1, 0, 0, 0],\n",
+    "\t\t\t\t\t[0, 1, 0, 0],\n",
+    "\t\t\t\t\t[0, 0, 0, 1],\n",
+    "\t\t\t\t\t[0, 0, 1, 0]])\n",
+    "\n",
+    "\tnoise_model = []\n",
+    "\n",
+    "\tfor op, p in error_template:\n",
+    "\t\terrorgate = np.array([[1]])\n",
+    "\t\tfor char in op:\n",
+    "\t\t\terrorgate = np.kron(errorgate, Paulis[char])\n",
+    "\t\tnoise_model.append(np.sqrt(p)*np.matmul(errorgate, Gates[gate]))\n",
+    "\n",
+    "\n",
+    "\tif np.log2(np.linalg.matrix_rank(errorgate)) == 2:\n",
+    "\t\tfor i, j in backend.qubit_topology().edges:\n",
+    "\t\t\tprog.define_noisy_gate(gate, [i,j], noise_model)\n",
+    "\t\t\tprog.define_noisy_gate(gate, [j,i], noise_model)\n",
+    "\telif np.log2(np.linalg.matrix_rank(errorgate)) == 1:\n",
+    "\t\tfor i in backend.qubits():\n",
+    "\t\t\tprog.define_noisy_gate(gate, [i], noise_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1. 0.]\n",
-      " [0. 1.]]\n",
-      "[[1. 0. 0. 0.]\n",
-      " [0. 1. 0. 0.]\n",
-      " [0. 0. 1. 0.]\n",
-      " [0. 0. 0. 1.]]\n",
-      "[[0.+0.j 1.+0.j]\n",
-      " [1.+0.j 0.+0.j]]\n",
-      "[{(0, 1): 1024}]\n"
+      "RZ(pi) 0\n",
+      "RX(pi/2) 0\n",
+      "RZ(pi/2) 0\n",
+      "RX(-pi/2) 0\n",
+      "RZ(pi) 1\n",
+      "RX(pi/2) 1\n",
+      "RZ(pi/2) 1\n",
+      "RX(-pi/2) 1\n",
+      "HALT\n",
+      "\n",
+      "DECLARE ro BIT[2]\n",
+      "Z 0\n",
+      "CNOT 0 1\n",
+      "Z 1\n",
+      "RZ(pi) 0\n",
+      "RX(pi/2) 0\n",
+      "RZ(pi/2) 0\n",
+      "RX(-pi/2) 0\n",
+      "RZ(pi) 1\n",
+      "RX(pi/2) 1\n",
+      "RZ(pi/2) 1\n",
+      "RX(-pi/2) 1\n",
+      "HALT\n",
+      "X 0\n",
+      "MEASURE 0 ro[0]\n",
+      "MEASURE 1 ro[1]\n",
+      "PRAGMA ADD-KRAUS CNOT 0 1 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 0 1 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 1 0 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 1 0 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 1 2 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 1 2 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 2 1 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 2 1 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 2 3 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 2 3 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 3 2 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 3 2 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 3 4 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 3 4 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 4 3 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
+      "PRAGMA ADD-KRAUS CNOT 4 3 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "\n",
+      "[{(0, 0): 1024}]\n"
      ]
     }
    ],
    "source": [
-    "from TrotterExample import get_noise_model, executor, get_backend\n",
+    "from TrotterExample import executor, get_backend\n",
     "from pyquil import Program\n",
     "from pyquil.gates import H, CNOT, Z, MEASURE, S, X, Y, I, RX, RZ, FENCE\n",
     "from pyquil.quilbase import Declare\n",
@@ -231,49 +165,60 @@
     "\n",
     "with local_forest_runtime():\n",
     "\n",
-    "    # Here the backend for the simulation is prepared\n",
-    "    from pyquil.quantum_processor import NxQuantumProcessor\n",
-    "    from pyquil.noise import NoiseModel\n",
-    "    from pyquil import get_qc\n",
-    "    import networkx as nx\n",
-    "    backend = get_qc(\"5q-qvm\") #str(n)+'q-qvm' #args.backend\n",
-    "    isa = backend.to_compiler_isa()\n",
-    "    backend_qubits = sorted(int(k) for k in isa.qubits.keys())\n",
-    "    # By default every qubit on our fake backend is connected with every other qubit. This breaks the algorhythm. So we need to change the topology\n",
-    "    # So this line here changes the topology of the fake backend. The condition in the end determines it\n",
-    "    edges = [(q1, q2) for q1 in backend_qubits for q2 in backend_qubits if abs(q1-q2) == 1]\n",
-    "    # Build the NX graph\n",
-    "    topo = nx.from_edgelist(edges)\n",
-    "    # You would uncomment the next line if you have disconnected qubits\n",
-    "    # topo.add_nodes_from(qubits)\n",
-    "    nx_quantum_processor = NxQuantumProcessor(topo)\n",
-    "    backend.compiler.quantum_processor = nx_quantum_processor\n",
+    "\t# Here the backend for the simulation is prepared\n",
+    "\tfrom pyquil.quantum_processor import NxQuantumProcessor\n",
+    "\tfrom pyquil.noise import NoiseModel\n",
+    "\tfrom pyquil import get_qc\n",
+    "\timport networkx as nx\n",
+    "\tbackend = get_qc(\"5q-qvm\") #str(n)+'q-qvm' #args.backend\n",
+    "\tisa = backend.to_compiler_isa()\n",
+    "\tbackend_qubits = sorted(int(k) for k in isa.qubits.keys())\n",
+    "\t# By default every qubit on our fake backend is connected with every other qubit. This breaks the algorhythm. So we need to change the topology\n",
+    "\t# So this line here changes the topology of the fake backend. The condition in the end determines it\n",
+    "\tedges = [(q1, q2) for q1 in backend_qubits for q2 in backend_qubits if abs(q1-q2) == 1]\n",
+    "\t# Build the NX graph\n",
+    "\ttopo = nx.from_edgelist(edges)\n",
+    "\t# You would uncomment the next line if you have disconnected qubits\n",
+    "\t# topo.add_nodes_from(qubits)\n",
+    "\tnx_quantum_processor = NxQuantumProcessor(topo)\n",
+    "\tbackend.compiler.quantum_processor = nx_quantum_processor\n",
     "\n",
-    "    prog = Program()\n",
-    "    prog += Declare(\"ro\", \"BIT\", 2)\n",
-    "    #prog += X(0)\n",
-    "    prog += X(1)\n",
-    "    prog += CNOT(0,1)\n",
-    "    prog += MEASURE(0, (\"ro\", 0))\n",
-    "    prog += MEASURE(1, (\"ro\", 1))\n",
-    "    identity = np.eye(2)\n",
-    "    print(identity)\n",
-    "    identity2 = np.eye(4)\n",
-    "    print(identity2)\n",
-    "    flip =  np.array([[0.+0.j, 1.+0.j],\n",
-    "                            [1.+0.j, 0.+0.j]])\n",
-    "    print(flip)\n",
-    "    test = [np.array([[1.        , 0.        ],\n",
-    "       [0.        , 0.98994949]]), np.array([[0.        , 0.14142136],\n",
-    "       [0.        , 0.        ]])]\n",
-    "    (noise_model, twoqubit_error_template, singlequbit_error_template) = get_noise_model()\n",
-    "    #prog.define_noisy_gate(\"X\", [0], [identity])\n",
-    "    prog.define_noisy_gate(\"CNOT\", [0,1], [cnot])#append_damping_to_gate(np.eye(2), 0.1))\n",
-    "    #prog.define_noisy_gate(\"CNOT\", [1,0], [pauli_IX])\n",
+    "\tprog = Program()\n",
+    "\tprog += Declare(\"ro\", \"BIT\", 2)\n",
+    "\tprog += Z(0)\n",
+    "\tprog += CNOT(0,1)\n",
+    "\tprog += Z(1)\n",
     "\n",
-    "    counts = executor([prog], backend, 1024)\n",
-    "    print(counts)\n",
-    "    #print(noise_model)\n",
+    "\tprog2 = Program()\n",
+    "\tprog2 += H(1)\n",
+    "\tprog2 += H(0)\n",
+    "\tprog2 = prog2.dagger()\n",
+    "\tprog2 = backend.compile(prog2)\n",
+    "\tprint(prog2)\n",
+    "\n",
+    "\tprog += prog2\n",
+    "\tprog += X(0)\n",
+    "\tprog += MEASURE(0, (\"ro\", 0))\n",
+    "\tprog += MEASURE(1, (\"ro\", 1))\n",
+    "\tflip =  np.array([[0.+0.j, 1.+0.j],\n",
+    "\t\t\t\t\t\t\t[1.+0.j, 0.+0.j]])\n",
+    "\ttest = [np.array([[1.        , 0.        ],\n",
+    "\t\t[0.        , 0.98994949]]), np.array([[0.        , 0.14142136],\n",
+    "\t\t[0.        , 0.        ]])]\n",
+    "\n",
+    "\n",
+    "\ttwoqubit_errorops = ['IX']\n",
+    "\ttwoqubit_errorprobs = [0.05]\n",
+    "\ttwoqubit_error_template = [(op, p) for op,p in zip(twoqubit_errorops, twoqubit_errorprobs)]+[(\"II\", 1-sum(twoqubit_errorprobs))]\n",
+    "\t#(noise_model, twoqubit_error_template, singlequbit_error_template) = get_noise_model()\n",
+    "\t#prog.define_noisy_gate(\"X\", [0], [identity])\n",
+    "\tdef make_prog_noisy(prog):\n",
+    "\t\tprog.define_noisy_gate(\"CNOT\", [0,1], [np.sqrt(0.5)*cnot, np.sqrt(0.5)*pauli_II])#append_damping_to_gate(np.eye(2), 0.1))\n",
+    "\t#prog.define_noisy_gate(\"CNOT\", [1,0], [pauli_IX])\n",
+    "\tapply_noise_model(prog, backend, twoqubit_error_template, \"CNOT\")\n",
+    "\n",
+    "\tcounts = executor([prog], backend, 1024, apply_noise=False)\n",
+    "\tprint(counts)\n",
     "    "
    ]
   }
