--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,57 +101,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RZ(pi) 0\n",
-      "RX(pi/2) 0\n",
-      "RZ(pi/2) 0\n",
-      "RX(-pi/2) 0\n",
-      "RZ(pi) 1\n",
-      "RX(pi/2) 1\n",
-      "RZ(pi/2) 1\n",
-      "RX(-pi/2) 1\n",
-      "HALT\n",
+      "DAGGER H 0\n",
+      "DAGGER H 1\n",
       "\n",
       "DECLARE ro BIT[2]\n",
-      "Z 0\n",
-      "CNOT 0 1\n",
-      "Z 1\n",
-      "RZ(pi) 0\n",
-      "RX(pi/2) 0\n",
-      "RZ(pi/2) 0\n",
-      "RX(-pi/2) 0\n",
-      "RZ(pi) 1\n",
-      "RX(pi/2) 1\n",
-      "RZ(pi/2) 1\n",
-      "RX(-pi/2) 1\n",
-      "HALT\n",
-      "X 0\n",
-      "MEASURE 0 ro[0]\n",
-      "MEASURE 1 ro[1]\n",
-      "PRAGMA ADD-KRAUS CNOT 0 1 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 0 1 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 1 0 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 1 0 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 1 2 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 1 2 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 2 1 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 2 1 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 2 3 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 2 3 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 3 2 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 3 2 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 3 4 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 3 4 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 4 3 \"(0.0 0.22360679774997896 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.0 0.22360679774997896 0.0 0.0 0.0 0.0 0.22360679774997896)\"\n",
-      "PRAGMA ADD-KRAUS CNOT 4 3 \"(0.9746794344808963 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.0 0.0 0.0 0.9746794344808963 0.0 0.0 0.9746794344808963 0.0)\"\n",
+      "S 0\n",
       "\n",
-      "[{(0, 0): 1024}]\n"
+      "[{(0, 0, 0, 0, 0): 1024}]\n"
      ]
     }
    ],
@@ -185,6 +148,8 @@
     "\n",
     "\tprog = Program()\n",
     "\tprog += Declare(\"ro\", \"BIT\", 2)\n",
+    "\tprog += H(0)\n",
+    "\tprog += H(1)\n",
     "\tprog += Z(0)\n",
     "\tprog += CNOT(0,1)\n",
     "\tprog += Z(1)\n",
@@ -193,13 +158,19 @@
     "\tprog2 += H(1)\n",
     "\tprog2 += H(0)\n",
     "\tprog2 = prog2.dagger()\n",
-    "\tprog2 = backend.compile(prog2)\n",
     "\tprint(prog2)\n",
+    "\tprog2 = backend.compile(prog2)\n",
     "\n",
     "\tprog += prog2\n",
     "\tprog += X(0)\n",
     "\tprog += MEASURE(0, (\"ro\", 0))\n",
     "\tprog += MEASURE(1, (\"ro\", 1))\n",
+    "\n",
+    "\tprog3 = Program()\n",
+    "\tprog3 += Declare(\"ro\", \"BIT\", 2)\n",
+    "\tprog3 += S(0)\n",
+    "\tprint(prog3)\n",
+    "\n",
     "\tflip =  np.array([[0.+0.j, 1.+0.j],\n",
     "\t\t\t\t\t\t\t[1.+0.j, 0.+0.j]])\n",
     "\ttest = [np.array([[1.        , 0.        ],\n",
@@ -215,9 +186,9 @@
     "\tdef make_prog_noisy(prog):\n",
     "\t\tprog.define_noisy_gate(\"CNOT\", [0,1], [np.sqrt(0.5)*cnot, np.sqrt(0.5)*pauli_II])#append_damping_to_gate(np.eye(2), 0.1))\n",
     "\t#prog.define_noisy_gate(\"CNOT\", [1,0], [pauli_IX])\n",
-    "\tapply_noise_model(prog, backend, twoqubit_error_template, \"CNOT\")\n",
+    "\t#apply_noise_model(prog, backend, twoqubit_error_template, \"CNOT\")\n",
     "\n",
-    "\tcounts = executor([prog], backend, 1024, apply_noise=False)\n",
+    "\tcounts = executor([prog], backend, 1024)\n",
     "\tprint(counts)\n",
     "    "
    ]
