--- a/analyze_pnt.ipynb
+++ b/analyze_pnt.ipynb
@@ -75,6 +75,7 @@
     "    else:\n",
     "        dic[\"num_qubits\"] = len(dic[\"qubits\"])\n",
     "    #if split_namebase[7] == '[0,1,2,3]' and split_namebase[8] == 'and' and split_namebase[9] == 'transpile':\n",
+    "    i, dic[\"depths\"]= i+1, ast.literal_eval(split_namebase[i])\n",
     "    return dic"
    ]
   },
